--- a/index.css
+++ b/index.css
@@ -17,6 +17,11 @@
     text-align: center;
 }
 
+#file_uploader {
+    line-height: 1em;
+    font-size: .7em;
+}
+
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
